# dicom-browser

./: .gitignore  main.py  pyproject.toml
src/: main.py
src/dicom/: loader.py
src/tui/: app.py  styles.tcss
src/utils/: fetch_standard.py
